# Edge-Embedded-Project

./: README.md  comm_test.py  요구 분석 명세서.docx
JetDash/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
docs/: Protocol.md
lepton_thermal_camera/: README.md
lepton_thermal_camera/test/: gpio_test.c  lepton.c  lepton.h  lepton_stream.c  lepton_test.c  main.c  spi_test.c  spi_test.out
vehicle/rpi/include/: camera.h  lepton.h  network.h  sensor.h
vehicle/rpi/src/: lepton.c  main.c  ringbuffer.c
